--- a/scripts/config/templates/nginx.conf.erb
+++ b/scripts/config/templates/nginx.conf.erb
@@ -51,9 +51,16 @@ http {
     resolver <%= resolver %>;
   <% end %>
 
+  <%= 'include prerender.conf;' if prerender %>
+
     location / {
       mruby_post_read_handler /app/bin/config/lib/ngx_mruby/headers.rb cache;
+
+    <%if prerender %>
+      set $fallback @prerender;
+    <%else%>
       mruby_set $fallback /app/bin/config/lib/ngx_mruby/routes_fallback.rb cache;
+    <%end>
     <% if clean_urls %>
       try_files $uri.html $uri $uri/ $fallback;
     <% else %>
